refactor: API key 보호 방식 변경 + 학교/학과 검색 API 수정
- Spring Security를 활용하여 API 키 필터 구현. (.env 파일에 작성 후 gitignore에 추가)
- 학교/학과 API에서 필요한 필드만 필터링. + UTF-8 인코딩 방식 변경. + JSON 문자열 역직렬화 오류 해결.